Updated swagger definition of move for fen before/after
