# src/server/chess-api/swagger_server/models/move_factory.py
@@ -3,6 +3,7 @@ from swagger_server.models.move import Move
 
 def create_move_model(board, move):
     copy = board.copy()
+    fen_before = board.fen()
     src = chess.square_name(move.from_square)
     dst = chess.square_name(move.to_square)
     piece = copy.piece_at(move.from_square).symbol()
@@ -18,10 +19,14 @@ def create_move_model(board, move):
         else:
             captured_piece = "P"
     copy.push(move)
+    fen_after = copy.fen()
     is_check = copy.is_check()
     is_mate = copy.is_checkmate()
     is_stalemate = copy.is_stalemate()
-    return Move(piece, src, dst, is_check=is_check, is_mate=is_mate, is_stalemate=is_stalemate, is_enpessant=is_enpessant, is_castle=is_castle, captured_piece=captured_piece)
+    return Move(piece, src, dst, is_check=is_check, is_mate=is_mate, 
+        is_stalemate=is_stalemate, is_enpessant=is_enpessant, 
+        is_castle=is_castle, captured_piece=captured_piece, 
+        fen_before=fen_before, fen_after=fen_after)
 
 def create_move_models(board, moves):
     copy = board.copy()
